@@ -15,3 +15,4 @@ Changes in version 1.1.x (2021-06-04)
 + added subsampleCounts for Subsampling/Rarefying data
 + added getExperimentCrossCorrelation for calculatting cross-correlation between features
 + added calculateOverlap
++ getUniqueTaxa & getTopTaxa: added option for alphabetical order
